2012-12-03 Kai Tietz  <ktietz@redhat.com>

	PR target/53912
	* ggc-common.c (POINTER_HASH): Cast from pointer via intptr_t.

	PR target/53912
	* tree-dump.c (dump_pointer): Print pointer via HOST_WIDE_INT_PRINT.

	PR target/53912
	* pointer-set.c (hash1): Cast from pointer via uintptr_t.

2012-12-02  Marek Polacek  <polacek@redhat.com>

	PR middle-end/54838
	* cprop.c (bypass_block): Determine number of latches.  Return
	when there is more than one latch edge.

2012-12-02  Teresa Johnson  <tejohnson@google.com>

	PR gcov-profile/55551
	* lto-cgraph.c (merge_profile_summaries): Handle scaled histogram
	entries that map to the same index.

2012-12-02  Steven Bosscher  <steven@gcc.gnu.org>

	* optabs.c (add_equal_note): Do not create self-referencing REG_EQUAL
	notes.
	* fwprop.c (forward_propagate_and_simplify): Likewise.

2012-12-02  Steven Bosscher  <steven@gcc.gnu.org>

	* function.h (struct rtl_data): Remove epilogue_delay_list.
	* reorg.c (find_end_label): Simplify always-true test.
	(optimize_skip): Likewise.
	* final.c (leaf_function_p): Don't loop over epilogue_delay_list.
	(leaf_renumber_regs): Likewise.
	* varasm.c (mark_constant_pool): Likewise.
	* except.c (set_nothrow_function_flags): Likewise.
	* cfgrtl.c (print_rtl_with_bb): Likewise.

2012-12-02  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/mmix/mmix.c (mmix_function_value): Set the mode of the
	returned PARALLEL to that of the return-value, not VOIDmode.

2012-12-02  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/extend.texi: Various corrections to punctuation and grammar
	throughout the file.  Use consistent terminology and proper names.
	Correct some minor markup issues.

2010-12-01  Xinliang David Li  <davidxl@google.com>

        * config/i386/i386.c: Allow sign extend instructions (cltd etc)
        on modern CPUs.

2012-12-02  Steven Bosscher  <steven@gcc.gnu.org>

	* reorg.c: Remove an obsolete comment.
	* config/pa/pa.md: Add back the HP-PA comment here, with details.
